@@ -35,6 +35,8 @@
  *                   Tim Bardzil;
  *                   Rob Van der Sanden (patches 1866446 and 1888422);
  *                   Peter Becker (patches 2868585 and 2868608);
+ *                   Martin Krauskopf (patch 3421088);
+ *                   Martin Hoeller;
  *
  * Changes
  * -------
@@ -80,6 +82,7 @@
  *               by Peter Becker (DG);
  * 28-Sep-2009 : Added whiskerWidth attribute, see patch 2868608 by Peter
  *               Becker (DG);
+ * 11-Oct-2011 : applied patch #3421088 from Martin Krauskopf to fix bug (MH);
  *
  */
 
@@ -841,11 +844,11 @@ public class BoxAndWhiskerRenderer extends AbstractCategoryItemRenderer
             }
             // draw the upper shadow...
             g2.draw(new Line2D.Double(xxmid, yyMax, xxmid, yyQ3));
-            g2.draw(new Line2D.Double(xx - halfW, yyMax, xx + halfW, yyMax));
+            g2.draw(new Line2D.Double(xxmid - halfW, yyMax, xxmid + halfW, yyMax));
 
             // draw the lower shadow...
             g2.draw(new Line2D.Double(xxmid, yyMin, xxmid, yyQ1));
-            g2.draw(new Line2D.Double(xx - halfW, yyMin, xx + halfW, yyMin));
+            g2.draw(new Line2D.Double(xxmid - halfW, yyMin, xxmid + halfW, yyMin));
 
             g2.setStroke(getItemOutlineStroke(row, column));
             g2.setPaint(outlinePaint);
