@@ -1,5 +1,11 @@
 2011-10-11  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Patch 3421088:
+    * org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
+    (drawVerticalItem): bugfix for misaligned whiskers.
+
+2011-10-11  David Gilbert  <david.gilbert@object-refinery.com>
+
     Bug 3237879:
     * org/jfree/chart/plot/RingPlot.java
     (drawItem): Check sectionOutlineVisible flag.
